<resources>
    <string name="app_name">Kirilov Containers Task</string>
    <string name="login_et_username_hint">Username</string>
    <string name="bluetooth_detection">Bluetooth Detection</string>
    <string name="disconnect">Disconnect</string>
    <string name="display_list">Display List</string>
    <string name="display_map">Display Map</string>
    <string name="bluetooth_le_device">Connect to a BLE Device</string>

    <string name="gps_longitude">GPS longitude: %1$s</string>
    <string name="gps_latitude">GPS latitude: %1$s</string>
    <string name="waste_type">Waste type: %1$s</string>
    <string name="filling_level">Filling level: %1$s</string>
    <string name="no_containers_found_message">No containers found.</string>
    <string name="containers_screen_title">Containers</string>

    <string name="permission_fine_location_rationale_message">To access the Map screen, location permissions are required to display your current location.</string>

    <string name="paper_icon_id">waste-icon-paper</string>
    <string name="glass_icon_id">waste-icon-glass</string>
    <string name="household_garbage_icon_id">waste-icon-household-garbage</string>
    <string name="default_waste_type_icon_id">waste-icon-default</string>

    <string name="edit_container_filling_level_hint">Filling Level</string>
    <string name="edit_container_waste_type_hint">Waste Type</string>
    <string name="edit_container_latitude_hint">Latitude</string>
    <string name="edit_container_longitude_hint">Longitude</string>
    <string name="edit_container_name_hint">Name</string>

    <string name="username_pref_key">USERNAME_PREF_KEY</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoic3RldmVua3IiLCJhIjoiY2ttb2I4ZHg2MjMyNTJvazVwZXBuOTA3MCJ9.4GDuAXIDfvus8LlC0XWRpA</string>
    <string name="edit_container_screen_title">Edit Container</string>
    <string name="login">Login</string>
</resources>