<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_bluetooth_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_screen_edge"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tv_bluetooth_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Username" />

        <TextClock
            android:id="@+id/tv_bluetooth_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_screen_edge"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintBottom_toBottomOf="@id/tv_bluetooth_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_bluetooth_username" />

        <Button
            android:id="@+id/btn_bluetooth_le_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal_menu_button"
            android:layout_marginVertical="@dimen/margin_screen_edge"
            android:background="@drawable/round_corners_view"
            android:text="@string/bluetooth_le_device"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@id/btn_bluetooth_display_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_bluetooth_display_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal_menu_button"
            android:layout_marginVertical="@dimen/margin_screen_edge"
            android:background="@drawable/round_corners_view"
            android:text="@string/display_list"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@id/btn_bluetooth_display_map"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_bluetooth_display_map"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal_menu_button"
            android:layout_marginVertical="@dimen/margin_screen_edge"
            android:background="@drawable/round_corners_view"
            android:text="@string/display_map"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>